# depin-zk-test

./: Cargo.toml  README.md  devices  did  instshell  podstart  project.json
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: lib.rs  main.rs
utils/: convert_journal.py  dewi_messages_10.csv  dewi_messages_100.csv  dewi_messages_5.csv  dewi_messages_50.csv  genData.py  instshell  messages.csv  podstart  send_batch.sh  send_batch_dewi.sh
