[package]
name = "dewi-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dewi-demo-methods = { path = "methods" }
risc0-zkvm = {version = "0.20.0", path = "../../risc0/risc0/zkvm" }
dewi-core = { path = "./core"}
bytemuck = "1.14.1"
chrono = "0.4.19"
rand = "0.8.4"
serde_json = "1.0.113"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
